gitops/clusters/apse2/local/platform/oauth2-proxy/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6
          ports:
            - containerPort: 4180
          args:
            - --provider=github
            - --github-org=ywisper
            - --email-domain=*
            - --scope=read:org
            - --http-address=0.0.0.0:4180
            - --reverse-proxy=true
            - --cookie-secure=true
            - --cookie-domain=.opswork.io.vn
            - --whitelist-domain=.opswork.io.vn
            - --set-xauthrequest=true
