gitops/clusters/apse2/local/platform/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: platform
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
