gitops/clusters/apse2/local/platform/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: oauth2-proxy.opswork.io.vn
      http:
        # paths:
        #   - path: /
        #     pathType: Prefix
        #     backend:
        #       service:
        #         name: monitoring-kube-prometheus-prometheus
        #         port:
        #           number: 9090
